2007-07-05  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/Makefile.am: Add $(GFX_CFLAGS) and set it to
	-DMOZILLA_INTERNAL_API for non-thebes builds so we work with FF2
	again.  Only link libxpistub or libxpcomglue_s, not libgkgfx or
	libthebes, since they don't exist in static builds.

	* compzilla/src/compzillaRenderingContext.cpp: Grosshack to
	support static FF2 builds, where nsTransform2D API isn't exported.
	So we do the #define private public hack so we can access the
	contents directly from CZ_TransformNoXLate.

2007-07-03  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaWindow.cpp: Add SPEW_EVENT, to avoid
	clogging stdout, and do some cleanup on the debug output.

	* compzilla/src/compzillaControl.cpp (Filter): Don't spew on
	motion events for the same reason.

2007-07-03  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaWindow.cpp (DestroyWindow): Handle
	reentrancy while calling Destroy on observers.

2007-07-03  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/start.js: Add _NET_WM_ICON and
	_NET_WM_ICON_NAME as supported.

	* compzilla/chrome/content/xprops.js: Remove the "fillers"
	functions and instead enumerate the properties in the property bag
	and insert them into a standard JS object.  If there's only one
	property and it's called "atom", "text", or "data", return it
	directly.  Also, use an observer on the native window to
	invalidate the cached values.

	* compzilla/chrome/content/frame.js: Set title when *ICON_NAME is
	set. Don't call Invalidate on content.XProps, as this is handled
	automatically by xprops.js now.  Handle _NET_WM_ICON but just
	Debug() for now.

	* compzilla/chrome/content/minmax.js: Use getNativeProperty.

	* compzilla/chrome/content/content.js: Expose xprops via
	getNativeProperty. Add wmIcon property.

	* compzilla/src/compzillaWindow.cpp (GetProperty): Don't prefix
	property bag names with ".".  Set strut "partial" flag here,